# agent-eval-lab

./: .env.example  .gitignore  LICENSE  README.ko.md  README.md  docker-compose.yml  pyproject.toml  start-dashboard.command
.github/workflows/: test.yml
dashboard/: package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/compare/: page.tsx
dashboard/app/runs/[runId]/: page.tsx
dashboard/lib/: api.ts
src/agent_eval_lab/: __init__.py
src/agent_eval_lab/agents/: gemini_agent.py  groq_agent.py
src/agent_eval_lab/api/: main.py
src/agent_eval_lab/cli/: main.py
src/agent_eval_lab/core/: protocols.py  types.py
src/agent_eval_lab/evaluators/: __init__.py  cost.py  task_success.py  tool_call.py  trajectory.py
src/agent_eval_lab/runner/: __init__.py  orchestrator.py
src/agent_eval_lab/storage/: __init__.py  repository.py  schema.sql
src/agent_eval_lab/tasks/: __init__.py  loader.py
src/agent_eval_lab/tasks/suites/: suite_v1.json
src/agent_eval_lab/tools/: calc.py  file_ops.py  registry.py  weather.py
src/agent_eval_lab/tracing/: otel_setup.py
tests/: factories.py  test_task_success.py  test_tool_call.py
